fix alignment of bishop score

--- a/src/app/button-group/button-group.component.css
+++ b/src/app/button-group/button-group.component.css
@@ -19,7 +19,7 @@
   margin-top: 0;
   margin-bottom: 0;
   /*padding: 3px 15px 3px 15px;*/
-  min-width: 150px;
+  min-width: 10px;
 }
 
 .mat-raised-button.vertical-group.first {
